# Chess

./: CMakeLists.txt
Chess/: CMakeLists.txt  board.cc  board.h  game.cc  game.h  main.cc  piece.h
Chess.Console/: CMakeLists.txt  main.cc
Chess/core/: board.cc  board.h
